--- a/mapa.html
+++ b/mapa.html
@@ -567,7 +567,7 @@
                 var svg = d3.select(map.getPanes().overlayPane).append("svg").attr("id", "svg-puntos"),
                     g = svg.append("g").attr("class", "leaflet-zoom-hide");
 
-                d3.json("homicidios.json", function(collection) {
+                d3.json("homicidios2013.json", function(collection) {
 
                   // Dibuja los puntos sobre el mapa de Leaflet con D3.js
                   var transform = d3.geo.transform({point: projectPoint});
