--- a/mapa.html
+++ b/mapa.html
@@ -176,7 +176,7 @@
                     <div class="bottom-right">
 
                       <div class="texto-animado">
-                        <h4><small>Entre el</small> <span id="filtros-fechadesde">16 de Junio</span> <small>y el</small> <span id="filtros-fechahasta">21 de Diciembre</span> <small> de 2014 se cometieron </small><span id="cantidad-puntos"></span> <small>homicidios</small><small><span id="texto-comisarias"></span>, que representan un </small><span id="porcentaje">55</span>% <small>del total.</small></h4>
+                        <h4><small>Entre el</small> <span id="filtros-fechadesde">16 de Junio</span> de 2013 <small>y el</small> <span id="filtros-fechahasta">21 de Diciembre</span> <small> de 2014 se cometieron </small><span id="cantidad-puntos"></span> <small>homicidios</small><small><span id="texto-comisarias"></span>, que representan un </small><span id="porcentaje">100</span>% <small>del total.</small></h4>
                       </div>
 
                       <div id="timeline"></div>
